@@ -35,7 +35,6 @@ export(
        "weightTf",
        "weightTfIdf",
        "weightBin",
-       "weightLogical",
        "XMLSource")
 
 S3method("plot", "TermDocMatrix")
