@@ -1,5 +1,8 @@
 2009-04-03  Ingo Feinerer  <feinerer@logic.at>
 
+	* R/weight.R: Remove weightLogical since it does not return a
+	dgCMatrix.
+
 	* R/termdocmatrix.R: Further work on new TermDocumentMatrix.
 
 2009-03-28  Ingo Feinerer  <feinerer@logic.at>
